# pyjax.org

./: .gitignore  .gitmodules  Makefile  README.md  meetup-events.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
.github/.workflows/: pelican.yml
content/events/: event_308418263@meetup.com.md  event_308418296@meetup.com.md
content/pages/: about.md
