[project]
name = "pyjax-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.11",
    "pelican[markdown]>=4.11.0",
]

[dependency-groups]
dev = [
    "typer>=0.16.0",
]
meetup = [
    "feedparser>=6.0.11",
    "icalendar>=6.3.1",
    "requests>=2.32.4",
]
